fix header so tags do not overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@ body {
   overflow: hidden;
 }
 
+
 .quote-image {
   width: 100%;
 }
@@ -93,6 +94,7 @@ body {
   width: 70%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3em;
 }
 
 /* User Dashboard Styling */
